--- a/etc/web.xml
+++ b/etc/web.xml
@@ -5,14 +5,19 @@
 	id="oryx" version="2.4">
 	
 	<display-name>Oryx Editor</display-name>
-	<!--
+
 	<servlet>
-		<display-name>
-		Apache-Axis Servlet</display-name>
-		<servlet-name>AxisServlet</servlet-name>
-		<servlet-class>
-		org.apache.axis.transport.http.AxisServlet</servlet-class>
+		<display-name>Oryx Simple Storage Servlet</display-name>
+		<servlet-name>SimpleStorageServlet</servlet-name>
+		<servlet-class>org.oryxeditor.server.SimpleStorageServlet</servlet-class>
 	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SimpleStorageServlet</servlet-name>
+		<url-pattern>/server</url-pattern>
+	</servlet-mapping>
+
+	<!--
 	<servlet>
 		<display-name>
 		Axis Admin Servlet</display-name>
@@ -38,6 +43,7 @@
 		<url-pattern>/servlet/AdminServlet</url-pattern>
 	</servlet-mapping>
 	-->
+
 	<welcome-file-list>
 		<welcome-file>editor.xhtml</welcome-file>
 	</welcome-file-list>
