--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,15 @@
 	</target>
 
 	<target name="build-server">
+
         <mkdir dir="build/classes"/>
+
+		<copy todir='build/classes'>
+			<fileset dir="etc">
+				<include name="*.properties"/>
+			</fileset>
+		</copy>
+
 		<javac srcdir="server/src" destdir="build/classes" debug="on">
 			<classpath>
 				<fileset dir="lib">
@@ -50,8 +58,7 @@
 					<include name="batik-*.jar"/>
 					<include name="fop.jar"/>
 					<include name="avalon-framework-4.2.0.jar"/>
-					<include name="commons-logging-1.1.1.jar"/>
-					<include name="commons-io-1.1.jar"/>
+					<include name="commons-*.jar"/>
 					<include name="serializer-2.7.0.jar"/>
 					<include name="xalan-2.7.0.jar"/>
 					<include name="xercesImpl-2.7.1.jar"/>
@@ -155,8 +162,7 @@
 				<include name="js.jar"/>
 				<include name="fop.jar"/>
 				<include name="pdf-transcoder.jar"/>
-				<include name="commons-logging-1.1.1.jar"/>
-				<include name="commons-io-1.1.jar"/>
+				<include name="commons-*.jar"/>
 				<include name="serializer-2.7.0.jar"/>
 				<include name="xalan-2.6.0.jar"/>
 				<include name="xerces-2.5.0.jar"/>
