Back to mysql. Postgres 8.3 is in another branch now.

--- a/etc/database.properties
+++ b/etc/database.properties
@@ -1,5 +1,5 @@
 # Database connection
 db.username = oryx
-db.password = oryx
-db.url = jdbc:postgresql:oryx
-db.connector = org.postgresql.Driver
+db.password =
+db.url = jdbc:mysql://localhost/oryx
+db.connector = com.mysql.jdbc.Driver
