introducing new libraries for openid, and a new version of rhino. build and classpath altered for the openid auth servlet to come.

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="lib/js.jar"/>
+	<classpathentry kind="lib" path="lib/openid4java.jar"/>
 	<classpathentry kind="output" path="server/bin"/>
 </classpath>
