--- a/build.xml
+++ b/build.xml
@@ -1,192 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project>
-
+    
     <target name="clean">
         <delete dir="dist"/>
         <delete dir="build"/>
     </target>
-
-	<target name='examples' depends='build'>
-
-		<copy todir='build'>
-			<fileset file="editor.xhtml"/>
-			<fileset file="*.php"/>
-		</copy>
-		<copy todir='build/css'>
-			<fileset dir='src/css'/>
-		</copy>
-		<echo>Copied example files into build destination</echo>
-
-	</target>
-
-    <target name="build-plugins">
-
-		<copy todir='build/Plugins'>
-			<fileset dir="src/scripts/Plugins"/>
-		</copy>
-		<echo>Copied plugins into build destination</echo>
-		<copy todir='build/xslt'>
-			<fileset dir="src/xslt"/>
-		</copy>
-		<echo>Copied XSL stylesheets into build destination</echo>
-
-	</target>
-
-    <target name="build-stencilsets">
-
-		<copy todir='build/stencilsets'>
-			<fileset dir="data/stencilsets"/>
-		</copy>
-		<echo>Copied stencilsets into build destination</echo>
-
-	</target>
-
-	<target name="build-server">
-
-        <mkdir dir="build/classes"/>
-
-		<copy todir='build/classes'>
-			<fileset dir="etc">
-				<include name="*.properties"/>
-			</fileset>
-		</copy>
-
-		<javac srcdir="server/src" destdir="build/classes" debug="on">
-			<classpath>
-				<fileset dir="lib">
-					<include name="mysql-connector-java-5.1.5-bin.jar"/>
-					<include name="batik-*.jar"/>
-					<include name="fop.jar"/>
-					<include name="avalon-framework-4.2.0.jar"/>
-					<include name="commons-*.jar"/>
-					<include name="serializer-2.7.0.jar"/>
-					<include name="xalan-2.7.0.jar"/>
-					<include name="xercesImpl-2.7.1.jar"/>
-					<include name="xml-apis-1.3.02.jar"/>
-					<include name="xmlgraphics-commons-1.1.jar"/>
-					<include name="servlet-api.jar"/>
-				</fileset>
-			</classpath>
-		</javac>
-	</target>
-
-    <target name="build" depends="build-plugins, build-stencilsets, build-server">
-
-        <mkdir dir="build/tmp"/>
-		<copy todir='build' file='src/scripts/Core/config.js' />
-		<concat destfile='build/oryx.debug.js'>
-			<filelist id="coresourcefiles" dir="src">
-				<file name='scripts/oryx.js' />
-				<file name='scripts/Core/SVG/editpathhandler.js' />
-				<file name='scripts/Core/SVG/minmaxpathhandler.js' />
-				<file name='scripts/Core/SVG/pointspathhandler.js' />
-				<file name='scripts/Core/SVG/svgmarker.js' />
-				<file name='scripts/Core/SVG/svgshape.js' />
-				<file name='scripts/Core/SVG/label.js' />
-				<file name='scripts/Core/Math/math.js' />
-				<file name='scripts/Core/StencilSet/stencil.js' />
-				<file name='scripts/Core/StencilSet/property.js' />
-				<file name='scripts/Core/StencilSet/propertyitem.js' />
-				<file name='scripts/Core/StencilSet/complexpropertyitem.js' />
-				<file name='scripts/Core/StencilSet/rules.js' />
-				<file name='scripts/Core/StencilSet/stencilset.js' />
-				<file name='scripts/Core/StencilSet/stencilsets.js' />
-				<file name='scripts/Core/bounds.js' />
-				<file name='scripts/Core/uiobject.js' />
-				<file name='scripts/Core/abstractshape.js' />
-				<file name='scripts/Core/canvas.js' />
-				<file name='scripts/Core/main.js' />
-				<file name='scripts/Core/svgDrag.js' />
-				<file name='scripts/Core/shape.js' />
-				<file name='scripts/Core/Controls/control.js' />
-				<file name='scripts/Core/Controls/docker.js' />
-				<file name='scripts/Core/Controls/magnet.js' />
-				<file name='scripts/Core/node.js' />
-				<file name='scripts/Core/edge.js' />
-			</filelist>
-		</concat>
-		<echo>Concatenated source files into oryx.js</echo>
-
-		<copy todir='build/lib'>
-			<fileset dir='lib' includes='**/*'/>
-		</copy>
-		<copy todir='build/shared'>
-			<fileset dir='shared' includes='**/*.js'/>
-		</copy>
-		<echo>Copied dependencies into library destination</echo>
-		<copy todir='build/images'>
-			<fileset dir='src/images' includes='**/*.png'/>
-		</copy>
-		<echo>Copied images into oryx build destination</echo>
-
+    
+    <target name='examples' depends='build'>
+        
+        <copy todir='build'>
+            <fileset file="editor.xhtml"/>
+            <fileset file="*.php"/>
+        </copy>
+        <copy todir='build/css'>
+            <fileset dir='src/css'/>
+        </copy>
+        <echo>
+            Copied example files into build destination
+        </echo>
+        
     </target>
-
-	<target name='compress'>
-
-		<tempfile property="compress.temp" destDir="build"/>
-
-		<java dir="build" jar="lib/custom_rhino.jar" fork="true"
-			failonerror="true" output='${compress.temp}'>
-			<arg value="-c"/>
-			<arg file='build/oryx.debug.js'/>
-		</java>
-		<echo>Using ${compress.temp} for compression</echo>
-
-		<echo>Compressing Oryx into build destination</echo>
-		<concat destfile='build/oryx.js'>
-			<fileset file="etc/license"/>
-			<fileset file="${compress.temp}"/>
-		</concat>
-
-		<delete file='${compress.temp}'/>
-
-	</target>
-
+    
+    <target name="build-plugins">
+        
+        <copy todir='build/Plugins'>
+            <fileset dir="src/scripts/Plugins"/>
+        </copy>
+        <echo>
+            Copied plugins into build destination
+        </echo>
+        <copy todir='build/xslt'>
+            <fileset dir="src/xslt"/>
+        </copy>
+        <echo>
+            Copied XSL stylesheets into build destination
+        </echo>
+        
+    </target>
+    
+    <target name="build-stencilsets">
+        
+        <copy todir='build/stencilsets'>
+            <fileset dir="data/stencilsets"/>
+        </copy>
+        <echo>
+            Copied stencilsets into build destination
+        </echo>
+        
+    </target>
+    
+    <target name="build-server">
+        
+        <mkdir dir="build/classes"/>
+        
+        <copy todir='build/classes'>
+            <fileset dir="etc">
+                <include name="*.properties"/>
+            </fileset>
+        </copy>
+        
+        <copy todir='build'>
+            <fileset dir="server">
+                <include name="*.jsp"/>
+            </fileset>
+        </copy>
+        
+        <javac srcdir="server/src" destdir="build/classes" debug="on">
+            <classpath>
+                <fileset dir="lib">
+                    <include name="mysql-connector-java-5.1.5-bin.jar"/>
+                    <include name="batik-*.jar"/>
+                    <include name="fop.jar"/>
+                    <include name="avalon-framework-4.2.0.jar"/>
+                    <include name="commons-*.jar"/>
+                    <include name="serializer-2.7.0.jar"/>
+                    <include name="xalan-2.7.0.jar"/>
+                    <include name="xercesImpl-2.7.1.jar"/>
+                    <include name="xml-apis-1.3.02.jar"/>
+                    <include name="xmlgraphics-commons-1.1.jar"/>
+                    <include name="servlet-api.jar"/>
+                    <include name="openid4java.jar"/>
+                    <include name="js.jar"/>
+                </fileset>
+            </classpath>
+        </javac>
+    </target>
+    
+    <target name="build" depends="build-plugins, build-stencilsets, build-server">
+        
+        <mkdir dir="build/tmp"/>
+        <copy todir='build' file='src/scripts/Core/config.js'/>
+        <concat destfile='build/oryx.debug.js'>
+            <filelist id="coresourcefiles" dir="src">
+                <file name='scripts/oryx.js'/>
+                <file name='scripts/Core/SVG/editpathhandler.js'/>
+                <file name='scripts/Core/SVG/minmaxpathhandler.js'/>
+                <file name='scripts/Core/SVG/pointspathhandler.js'/>
+                <file name='scripts/Core/SVG/svgmarker.js'/>
+                <file name='scripts/Core/SVG/svgshape.js'/>
+                <file name='scripts/Core/SVG/label.js'/>
+                <file name='scripts/Core/Math/math.js'/>
+                <file name='scripts/Core/StencilSet/stencil.js'/>
+                <file name='scripts/Core/StencilSet/property.js'/>
+                <file name='scripts/Core/StencilSet/propertyitem.js'/>
+                <file name='scripts/Core/StencilSet/complexpropertyitem.js'/>
+                <file name='scripts/Core/StencilSet/rules.js'/>
+                <file name='scripts/Core/StencilSet/stencilset.js'/>
+                <file name='scripts/Core/StencilSet/stencilsets.js'/>
+                <file name='scripts/Core/bounds.js'/>
+                <file name='scripts/Core/uiobject.js'/>
+                <file name='scripts/Core/abstractshape.js'/>
+                <file name='scripts/Core/canvas.js'/>
+                <file name='scripts/Core/main.js'/>
+                <file name='scripts/Core/svgDrag.js'/>
+                <file name='scripts/Core/shape.js'/>
+                <file name='scripts/Core/Controls/control.js'/>
+                <file name='scripts/Core/Controls/docker.js'/>
+                <file name='scripts/Core/Controls/magnet.js'/>
+                <file name='scripts/Core/node.js'/>
+                <file name='scripts/Core/edge.js'/>
+            </filelist>
+        </concat>
+        <echo>
+            Concatenated source files into oryx.js
+        </echo>
+        
+        <copy todir='build/lib'>
+            <fileset dir='lib' includes='**/*'/>
+        </copy>
+        <copy todir='build/shared'>
+            <fileset dir='shared' includes='**/*.js'/>
+        </copy>
+        <echo>
+            Copied dependencies into library destination
+        </echo>
+        <copy todir='build/images'>
+            <fileset dir='src/images' includes='**/*.png'/>
+        </copy>
+        <echo>
+            Copied images into oryx build destination
+        </echo>
+        
+    </target>
+    
+    <target name='compress'>
+        
+        <tempfile property="compress.temp" destDir="build"/>
+        
+        <java dir="build" jar="lib/custom_rhino.jar" fork="true"
+         failonerror="true" output='${compress.temp}'>
+            <arg value="-c"/>
+            <arg file='build/oryx.debug.js'/>
+        </java>
+        <echo>
+            Using ${compress.temp} for compression
+        </echo>
+        
+        <echo>
+            Compressing Oryx into build destination
+        </echo>
+        <concat destfile='build/oryx.js'>
+            <fileset file="etc/license"/>
+            <fileset file="${compress.temp}"/>
+        </concat>
+        
+        <delete file='${compress.temp}'/>
+        
+    </target>
+    
     <target name="dist">
         <mkdir dir="dist"/>
-		
-		<!--
-		<echo>Creating zip for offline or php use, and online war file.</echo>
-		<zip destfile="dist/oryx.zip">
-			<fileset dir="build">
-				<exclude name="*.php"/>
-				<exclude name="classes/"/>
-			</fileset>
-
-		</zip>
-		-->
-		
-		<echo>Creating web application archive.</echo>
-		<war destfile="dist/oryx.war" webxml="etc/web.xml">
-
-			<lib dir="lib">
-				<include name="batik-*.jar"/>
-				<include name="js.jar"/>
-				<include name="fop.jar"/>
-				<include name="pdf-transcoder.jar"/>
-				<include name="commons-*.jar"/>
-				<include name="serializer-2.7.0.jar"/>
-				<include name="xalan-2.6.0.jar"/>
-				<include name="xerces-2.5.0.jar"/>
-				<include name="xml-apis.jar"/>
-				<include name="xml-apis-ext.jar"/>
-				<include name="xmlgraphics-commons-1.1.jar"/>
-				
-				<!-- database connectors. consider moving this to users responsibility -->
-				<include name="mysql-connector-java-5.1.5-bin.jar"/>
-				<!-- <include name="postgresql-8.3dev-602.jdbc3.jar"/> -->
-
-			</lib>
-
-			<fileset dir="build">
-				<exclude name="classes/"/>
-			</fileset>
-
-			<classes dir="build/classes"/>
-
-		</war>
-
+        
+        <!--
+        <echo>Creating zip for offline or php use, and online war file.</echo>
+        <zip destfile="dist/oryx.zip">
+        <fileset dir="build">
+        <exclude name="*.php"/>
+        <exclude name="classes/"/>
+        </fileset>
+        
+        </zip>
+        -->
+        
+        <echo>
+            Creating web application archive.
+        </echo>
+        <war destfile="dist/oryx.war" webxml="etc/web.xml">
+            
+            <lib dir="lib">
+                <include name="batik-*.jar"/>
+                <include name="js.jar"/>
+                <include name="fop.jar"/>
+                <include name="pdf-transcoder.jar"/>
+                <include name="commons-*.jar"/>
+                <include name="serializer-2.7.0.jar"/>
+                <include name="xalan-2.6.0.jar"/>
+                <include name="xerces-2.5.0.jar"/>
+                <include name="xml-apis.jar"/>
+                <include name="xml-apis-ext.jar"/>
+                <include name="xmlgraphics-commons-1.1.jar"/>
+                
+                <!-- needed for openid authentication -->
+                <include name="openid4java.jar"/>
+                <include name="openxri-*.jar"/>
+                <include name="htmlparser.jar"/>
+                <include name="dom3-*.jar"/>
+                <include name="icu4j_3_4_1.jar"/>
+                <include name="jug-1.1.jar"/>
+                <include name="xmlsec-1.1.jar"/>
+                <include name="infocard/*.jar"/>
+                
+                <!-- database connectors. consider moving this to users responsibility -->
+                <include name="mysql-connector-java-5.1.5-bin.jar"/>
+                <!-- <include name="postgresql-8.3dev-602.jdbc3.jar"/> -->
+                
+            </lib>
+            
+            <fileset dir="build">
+              <exclude name="classes/"/>
+              <exclude name="*.php"/>
+            </fileset>
+            
+            <classes dir="build/classes"/>
+            
+        </war>
+        
     </target>
-
-    <target name="all" depends="build, examples, compress, dist" />
+    
+    <target name="all" depends="build, examples, compress, dist"/>
 </project>
