jruby works, hibernate mappings work in progress, dispatcher does basics

--- a/poem-jvm/backend/src/main/webapp/WEB-INF/web.xml
+++ b/poem-jvm/backend/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	
     <servlet-mapping>
         <servlet-name>PoEMServlet</servlet-name>
-        <url-pattern>/poem</url-pattern>
+        <url-pattern>/poem/*</url-pattern>
     </servlet-mapping>
 
 </web-app>
