Adding mime type mapping as per http://www.w3.org/TR/SVG/intro.html#MIMEType.

--- a/etc/web.xml
+++ b/etc/web.xml
@@ -136,5 +136,16 @@
             </taglib-location>
         </taglib>
     </jsp-config>
+	
+	<!--
+	jBoss' default mapping is to "image/svg", which causes the client not to
+	parse the SVG content as XML. However, the Oryx Editor client relies on
+	that behaviour. The mimetype as per W3C specification must be
+	"image/svg+xml". See http://www.w3.org/TR/SVG/intro.html#MIMEType.
+	-->
+	<mime-mapping>
+		<extension>svg</extension>
+		<mime-type>image/svg+xml</mime-type>
+	</mime-mapping>
     
 </web-app>
