--- a/etc/web.xml
+++ b/etc/web.xml
@@ -120,6 +120,26 @@
         </url-pattern>
     </servlet-mapping>
 	
+    <servlet>
+        <display-name>
+            Worklist
+        </display-name>
+        <servlet-name>
+            Worklist
+        </servlet-name>
+        <servlet-class>
+            org.oryxeditor.server.Worklist
+        </servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>
+            Worklist
+        </servlet-name>
+        <url-pattern>
+            /worklist
+        </url-pattern>
+    </servlet-mapping>
+
 	<servlet>
         <display-name>
             Oryx EPC Upload Servlet
