--- a/etc/web.xml
+++ b/etc/web.xml
@@ -59,7 +59,18 @@
             org.oryxeditor.server.MultiDownloader
         </servlet-class>
     </servlet>
-    
+
+<servlet>
+  <servlet-name>EngineProxy</servlet-name>
+  <servlet-class>org.oryxeditor.server.EngineProxy</servlet-class>
+</servlet>
+
+<servlet-mapping>
+  <servlet-name>EngineProxy</servlet-name>
+  <url-pattern>/engineproxy</url-pattern>
+</servlet-mapping>
+
+
     <servlet>
 		<display-name>Oryx BPMN to PNML Export</display-name>
 		<servlet-name>ExportServlet</servlet-name>
